# Wendfyr

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
apps/gui/: CMakeLists.txt
apps/tui/: CMakeLists.txt
apps/tui/src/: main.cpp  panel_view.cpp  panel_view.hpp
cmake/: CompilerWarnings.cmake
libs/core/: CMakeLists.txt
libs/core/include/wendfyr/: bootstrap.hpp
libs/core/include/wendfyr/domain/: errors.hpp
libs/core/include/wendfyr/domain/commands/: i_command.hpp
libs/core/include/wendfyr/domain/events/: event.hpp
libs/core/include/wendfyr/domain/models/: file_entry.hpp
libs/core/include/wendfyr/ports/driven/: i_config_service.hpp  i_filesystem_service.hpp
libs/core/include/wendfyr/ports/driving/: i_command_executor.hpp  i_command_factory.hpp  i_panel_model.hpp
libs/core/include/wendfyr/services/: event_bus.hpp  logging.hpp
libs/core/src/: bootstrap.cpp
libs/core/src/domain/: command_executor.cpp  command_executor.hpp  command_factory.cpp  command_factory.hpp  panel_model.cpp  panel_model.hpp
libs/core/src/domain/commands/: copy_command.cpp  copy_command.hpp  create_directory_command.cpp  create_directory_command.hpp  delete_command.cpp  delete_command.hpp  i_command.cpp  move_command.cpp  move_command.hpp
libs/core/src/domain/models/: file_entry.cpp
libs/core/src/infrastructure/: json_config_service.cpp  json_config_service.hpp  std_filesystem_service.cpp  std_filesystem_service.hpp
libs/core/src/ports/driven/: i_config_service.cpp  i_filesystem_service.cpp
libs/core/src/ports/driving/: i_command_executor.cpp  i_command_factory.cpp  i_panel_model.cpp
libs/core/src/services/: event_bus.cpp  logging.cpp
libs/core/tests/mocks/: mock_config_service.hpp  mock_filesystem_service.hpp
libs/core/tests/unit/:  copy_command_test.cpp  command_executor_test.cpp  copy_command_test.cpp  create_directory_command_test.cpp  delete_command_test.cpp  move_command_test.cpp  panel_model_test.cpp
tests/: CMakeLists.txt  integration_test.cpp
